<resources>
    <string name="app_name">MADProject</string>
    <string name="btn">GO</string>
    <string name="btn_viewProvince">View Province Wise</string>
    <string name="title">Province (SL)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="et_confirmed" />
    <string name="et_deaths" />
    <string name="et_recovered" />
    <string name="btn_update">UPDATE</string>
    <string name="etProvince" />
    <string name="etConfirmed" />
    <string name="etDeaths" />
    <string name="etRecovered" />
</resources>